Casino/src/objects/Result__c.object
<CustomObject>
    <fields>
        <fullName>Buy_In__c</fullName>
        <label>Buy In</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <formula>Payout__c - Buy_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Game__c</fullName>
        <label>Game</label>
        <referenceTo>Game__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payout__c</fullName>
        <label>Payout</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Player__c</columns>
        <columns>Payout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DailyBlackJack</fullName>
        <columns>Player__c</columns>
        <columns>Payout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Game__c</field>
            <operation>equals</operation>
            <value>BlackJack</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>DailyBlackJack</label>
    </listViews>
    <listViews>
        <fullName>DailyBlackSlots</fullName>
        <columns>Player__c</columns>
        <columns>Payout__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Game__c</field>
            <operation>equals</operation>
            <value>Slots</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>DailyBlackSlots</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>